@@ -45,10 +45,10 @@
                         </tr>
                     {% endif %}
                 {% endif %}
-                {% if team.room is not empty %}
+                {% if team.location is not empty %}
                     <tr>
                         <th>Location</th>
-                        <td>{{ team.room }}</td>
+                        <td>{{ team.location }}</td>
                     </tr>
                 {% endif %}
             </table>
